--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/manoj7654/cointab#readme",
   "dependencies": {
+   
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
